--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,21 @@
 {
   "env": {
     "node": true,
-    "es6": true    
+    "es6": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 2017,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "rules": {
     "indent": [
       "error",
       2,
-      { 
-        "SwitchCase": 1 
+      {
+        "SwitchCase": 1
       }
     ],
     "linebreak-style": [
