--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "author": "Dimas Restu Hidayanto",
   "license": "ISC OR GPL-3.0",
@@ -16,18 +17,23 @@
     "url": "http://travistidwell.com/jsencrypt/demo/"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "convict": "^4.4.1",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "helmet": "^3.21.2",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.4.0",
     "minio": "^7.0.5",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.23",
     "mongodb": "^3.1.13",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "validate.js": "^0.12.0",
-    "winston": "^2.4.5",
+    "winston": "^3.2.1",
     "winston-logstash": "^0.4.0"
   },
   "devDependencies": {
